[package]
name = "tokenized-authority"
version = "0.1.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.6.7"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.9.0"
thiserror = "1.0.24"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test =  "1.6.8"
tokio  = {version = "1.0", features = ["macros"]}
futures =  "0.3"
solana-sdk = "1.6.8"

[lib]
crate-type = ["cdylib", "lib"]
