[package]
name = "name-auctioning"
version = "0.1.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
no-admin = []

[dependencies]
solana-program = "1.8.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.9"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.3"
spl-name-service = {git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"]}
spl-auction = {git = "ssh://git@github.com/Bonfida/metaplex.git", branch="bonfida-fork", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test =  "1.8.5"
tokio  = {version = "1.0", features = ["macros"]}
futures =  "0.3"
solana-sdk = "1.8.5"

[lib]
crate-type = ["cdylib", "lib"]
